# AutobopFirmware

./: README.md
Paparazzi/: Makefile.ac  Makefile_BACKUP_4283.ac
Paparazzi/conf/airframes/tudelft/: bebop_course2018_orangeavoid.xml
Paparazzi/conf/flight_plans/tudelft/: course2018_orangeavoid_cyberzoo_ownframe.xml
Paparazzi/conf/modules/: cv_opencvdemo.xml  mission_fw.xml  orange_avoider.xml
Paparazzi/conf/userconf/tudelft/: course2018_conf.xml
Paparazzi/sw/airborne/arch/chibios/: STM32F107xC.ld  STM32F407xG.ld
Paparazzi/sw/airborne/modules/computer_vision/: colorfilter.cpp  colorfilter.h  cv_opencvdemo.c  cv_opencvdemo.h  opencv_example.cpp  opencv_image_functions.cpp
Paparazzi/sw/airborne/modules/orange_avoider/: orange_avoider.201803042209.c  orange_avoider.201804031636  orange_avoider.201804032209.h  orange_avoider.c  orange_avoider.cback
Paparazzi/sw/ext/chibios/: readme.txt
Paparazzi/sw/ext/fatfs/: README.md
Paparazzi/sw/ext/hacl-c/: Hacl_Ed25519.h  Makefile  kremlib.h
Paparazzi/sw/ext/key_generator/: Cargo.toml  README.md
Paparazzi/sw/ext/libzbar/: README.md
Paparazzi/sw/ext/mavlink/: README.md
Paparazzi/sw/ext/opencv_bebop/: .gitignore  .gitmodules  .travis.yml  Makefile  README.md  bebop.toolchain.cmake.common  bebop.toolchain.cmake.linux  bebop.toolchain.cmake.none-linux  bebop.toolchain.cmake.osx  fix_compiler_crash.patch  link.py
Paparazzi/sw/ext/pprzlink/doc/: make.bat
Paparazzi/sw/ext/rustlink/: .gitignore  Cargo.toml  README.md  link
Paparazzi/sw/ext/rustlink/src/: comms.rs  configs.rs  ivy.rs  main.rs
(+192 files in other folders)
